# HandwritingSFM

./: CMakeLists.txt  plotMappoints.m  readme.md
cmake_modules/: FindG2O.cmake
config/: qinghuamen.yaml  sceauxcastle.yaml
include/: frame.h  hwsfm.h  image.h  mappoint.h  setting.h  types_six_dof_expmap.h  viewer.h
poses/: poses.xml
src/: frame.cpp  hwsfm.cpp  image.cpp  main.cpp  mappoint.cpp  setting.cpp  types_six_dof_expmap.cpp  viewer.cpp
